Fee Checklist implementation and refactoring
