# backend/src/main/java/org/sofumar/portal/data/dto/request/ChecklistSearchRequestDto.java
@@ -1,0 +1,16 @@
+package org.sofumar.portal.data.dto.request;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@EqualsAndHashCode(callSuper = true)
+public class ChecklistSearchRequestDto extends PaginationDto {
+    private Integer year;
+}
