# backend/src/main/java/org/sofumar/portal/data/dto/response/QuarterCellDto.java
@@ -1,0 +1,19 @@
+package org.sofumar.portal.data.dto.response;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.sofumar.portal.constants.QuarterCellStatus;
+
+import java.math.BigDecimal;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class QuarterCellDto {
+    private int quarter;
+    private QuarterCellStatus status;
+    private BigDecimal amountPaid;
+}
